[project]
name = "{{ cookiecutter.__directory_name }}"
version = "{{ cookiecutter.project_version }}"
description = "Add your description here"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
dependencies = [
    "jaxlib @ https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.25+cuda12.cudnn89-cp311-cp311-manylinux2014_x86_64.whl",
    "jax==0.4.25",
    "nvidia-nccl-cu12>=2.19.3",
    "flax>=0.8.1",
    "optax>=0.1.9",
    "jmp>=0.0.4",
    "clu>=0.0.11",
    "hydra-core>=1.3.2",
    "einops>=0.7.0",
    "wandb>=0.16.3",
    "matplotlib>=3.8.3",
]
readme = "README.md"
requires-python = ">={{ cookiecutter.compatible_python_versions }}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    "pdoc3>=0.10.0",
    "pre-commit>=3.6.2",
    "pytest>=8.0.2",
    "ipykernel>=6.29.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# black用のチェックルール
target-version = "py311"
include = ["*.py"]
line-length = 119
indent-width = 4

# isort用のチェックルール
[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["xxxx"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

# black用のチェックルール
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = [
    "E203", # Whitespace before ':' (E203)
    "E501", # Line too long (82 &gt; 79 characters) (E501)
    "F811", # Redefinition of unused name from line n (F811)
    "E741", # Do not define classes named 'I', 'O', or 'l' (E742)
    "E266", # too many leading '#' for block comment (E266)
    "PIE",  # flake8-pie (PIE)
    "F601", # multi-value-repeated-key-literal (F601)
    "E721", # type-comparison (E721)
]
select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]

[tool.ruff.lint.mccabe]
max-complexity = 20

